--- a/app/src/main/res/layout/activity_bind_cam.xml
+++ b/app/src/main/res/layout/activity_bind_cam.xml
@@ -39,56 +39,63 @@
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp16" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imv_anima"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_sub_title"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="@dimen/y57">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/y40" />
+    <!--<FrameLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/tv_sub_title"-->
+    <!--android:layout_centerInParent="true"-->
+    <!--android:layout_marginTop="@dimen/y57">-->
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/image_camera" />
+    <!--<ImageView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center_horizontal"-->
+    <!--android:src="@drawable/image_camera" />-->
 
-        <ImageView
-            android:id="@+id/imgV_camera_wifi_light_flash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/add_image_wifilight" />
+    <!--<ImageView-->
+    <!--android:id="@+id/imgV_camera_wifi_light_flash"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:background="@drawable/add_image_wifilight" />-->
 
-        <FrameLayout
-            android:id="@+id/fLayout_hand"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="@dimen/y20"
-            android:layout_marginEnd="@dimen/x30"
-            android:layout_marginStart="@dimen/x30"
-            android:layout_marginTop="@dimen/y20"
-            android:orientation="vertical">
+    <!--<FrameLayout-->
+    <!--android:id="@+id/fLayout_hand"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="bottom|center_horizontal"-->
+    <!--android:layout_marginBottom="@dimen/y20"-->
+    <!--android:layout_marginEnd="@dimen/x30"-->
+    <!--android:layout_marginStart="@dimen/x30"-->
+    <!--android:layout_marginTop="@dimen/y20"-->
+    <!--android:orientation="vertical">-->
 
-            <ImageView
-                android:id="@+id/imgV_camera_red_dot"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/add_image_red_dot"
-                android:visibility="invisible" />
+    <!--<ImageView-->
+    <!--android:id="@+id/imgV_camera_red_dot"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center_horizontal"-->
+    <!--android:src="@drawable/add_image_red_dot"-->
+    <!--android:visibility="invisible" />-->
 
-            <ImageView
-                android:id="@+id/imgV_camera_hand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="@dimen/y10"
-                android:alpha="0.0"
-                android:src="@drawable/image_hand" />
-        </FrameLayout>
+    <!--<ImageView-->
+    <!--android:id="@+id/imgV_camera_hand"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="end"-->
+    <!--android:layout_marginTop="@dimen/y10"-->
+    <!--android:alpha="0.0"-->
+    <!--android:src="@drawable/image_hand" />-->
+    <!--</FrameLayout>-->
 
-    </FrameLayout>
+    <!--</FrameLayout>-->
 
 
     <View
@@ -108,8 +115,4 @@
         android:textColor="@color/color_4b9fd5"
         android:textSize="@dimen/sp16" />
 
-    <FrameLayout
-        android:id="@+id/fLayout_bind_device_list_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 </RelativeLayout>
