--- a/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
@@ -62,7 +62,7 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/fLayout_cam_message_item_bottom"
             android:layout_below="@+id/tv_cam_message_item_date"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="@dimen/y10"
             android:orientation="horizontal">
 
             <ImageView
