--- a/app/src/main/res/layout/activity_bind_bell.xml
+++ b/app/src/main/res/layout/activity_bind_bell.xml
@@ -43,8 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_bind_wait_msg"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/y40" />
+        android:layout_centerHorizontal="true" />
     <!--<FrameLayout-->
     <!--android:id="@+id/fLayout_flip_layout"-->
     <!--android:layout_width="wrap_content"-->
