黑屏,巡航,权限弹窗,不停直播,用户协议显示

--- a/app/src/_doby/res/values/oem_.xml
+++ b/app/src/_doby/res/values/oem_.xml
@@ -2,7 +2,7 @@
 <resources>
     <bool name="show_guide">true</bool>
     <bool name="show_copyright">false</bool>
-    <bool name="show_agreement">false</bool>
+    <bool name="show_agreement">true</bool>
     <bool name="show_about">true</bool>
     <bool name="show_official_website">false</bool>
     <bool name="show_official_hot_line">false</bool>
