--- a/app/src/main/res/layout/fragment_mine_info_set_pwd.xml
+++ b/app/src/main/res/layout/fragment_mine_info_set_pwd.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/x20"
-                android:layout_marginRight="@dimen/x20"
+                android:layout_toStartOf="@+id/ll_set_password_option"
                 android:background="@null"
                 android:hint="@string/ENTER_PWD_2"
                 android:inputType="textPassword"
@@ -57,6 +57,7 @@
                 android:background="@color/color_f2f2f2" />
 
             <LinearLayout
+                android:id="@+id/ll_set_password_option"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
