--- a/app/src/main/res/layout/fragment_set_device_alias.xml
+++ b/app/src/main/res/layout/fragment_set_device_alias.xml
@@ -44,8 +44,10 @@
             android:focusableInTouchMode="true"
             android:gravity="center"
             android:maxLength="24"
+            android:maxLines="1"
             android:paddingLeft="@dimen/x40"
             android:paddingRight="@dimen/x40"
+            android:singleLine="true"
             android:textColor="@color/color_666666"
             android:textColorHint="@color/color_cecece"
             android:textCursorDrawable="@drawable/bg_common_cursor"
