--- a/app/src/main/res/layout/activity_bind_cam.xml
+++ b/app/src/main/res/layout/activity_bind_cam.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,42 +10,47 @@
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
         layout="@layout/layout_default_custom_tool_bar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         hunt:ct_fit_system_window="true"
-        hunt:ct_icon="@drawable/nav_icon_back_gary" />
+        hunt:ct_icon="@drawable/nav_icon_back_gary"
+        hunt:layout_constraintEnd_toEndOf="parent"
+        hunt:layout_constraintStart_toStartOf="parent"
+        hunt:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_main_content"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/custom_toolbar"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y20"
         android:gravity="center"
         android:text="@string/Tap1_AddDevice_CameraTipsTitle"
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp26" />
+        android:textSize="@dimen/sp26"
+        hunt:layout_constraintEnd_toEndOf="parent"
+        hunt:layout_constraintStart_toStartOf="parent"
+        hunt:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
 
     <TextView
         android:id="@+id/tv_sub_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_main_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y15"
         android:gravity="center"
         android:text="@string/Tap1_AddDevice_CameraTips"
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp16" />
+        android:textSize="@dimen/sp16"
+        hunt:layout_constraintTop_toBottomOf="@+id/tv_main_content" />
 
     <ImageView
         android:id="@+id/imv_anima"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_sub_title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/y40" />
+        android:src="@drawable/album_delete_selector"
+        hunt:layout_constraintBottom_toTopOf="@+id/tv_bind_camera_tip"
+        hunt:layout_constraintEnd_toEndOf="parent"
+        hunt:layout_constraintStart_toStartOf="parent"
+        hunt:layout_constraintTop_toBottomOf="@+id/tv_sub_title" />
     <!--<FrameLayout-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="wrap_content"-->
@@ -102,17 +107,18 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/y1"
         android:layout_alignTop="@+id/tv_bind_camera_tip"
-        android:background="@color/color_d8d8d8" />
+        android:background="@color/color_d8d8d8"
+        hunt:layout_constraintBottom_toTopOf="@+id/tv_bind_camera_tip" />
 
     <TextView
         android:id="@+id/tv_bind_camera_tip"
         style="@style/ripple_background"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y50"
-        android:layout_alignParentBottom="true"
         android:gravity="center"
         android:text="@string/BLINKING"
         android:textColor="@color/color_4b9fd5"
-        android:textSize="@dimen/sp16" />
+        android:textSize="@dimen/sp16"
+        hunt:layout_constraintBottom_toBottomOf="parent" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
