--- a/app/src/main/res/layout/activity_bind_animation.xml
+++ b/app/src/main/res/layout/activity_bind_animation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -44,10 +44,11 @@
         android:id="@+id/imv_gif_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/layout_next_step"
         android:layout_below="@+id/tv_sub_title"
-        android:layout_marginEnd="@dimen/x20"
-        android:layout_marginStart="@dimen/x20" />
+        hunt:layout_constraintBottom_toTopOf="@+id/layout_next_step"
+        hunt:layout_constraintEnd_toEndOf="parent"
+        hunt:layout_constraintStart_toStartOf="parent"
+        hunt:layout_constraintTop_toBottomOf="@+id/tv_sub_title" />
 
     <LinearLayout
         android:id="@+id/layout_next_step"
@@ -73,4 +74,4 @@
             android:textSize="@dimen/sp16" />
     </LinearLayout>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
